theme/static/css/style.css
@charset "utf-8";
/** Reset **/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, figcaption, figure,
footer, header, hgroup, menu, nav, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    line-height: 1;
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
cite {
    font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;
    background: #eee;
    padding-left: 1ex;
    padding-right: 1ex;
}
ins {
    text-decoration: none;
}
del {
    text-decoration: line-through;
}
hr { clear:both; border: 0; height: 1px; background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0)); }
table {
    border-collapse: collapse;
    border-spacing: 0;
}
*, *:after, *:before {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

/** Generic **/
html {
	width: 100%;
	height: 100%;
}
body {
	min-width: 280px;
	font-family:Verdana, Arial, Helvetica, sans-serif;
	background: #fff url(/theme/images/bg.png) repeat top center fixed;
	color: #333;
	min-height: 100%;
}
h1, h2, h3, h4, h5, .faketitle {
	color:#B32C0E;
	font-weight:bold;
	margin-top: 20px;
	margin-bottom: 5px;
	border-bottom: 1px solid #eee;
}
h1 { font-size: 3.5ex; }
h2,.faketitle { font-size: 2.6ex; }
h3 { font-size: 2.4ex; margin-left: 1em; }
h4 { font-size: 2.2ex; margin-left: 2em; }
h5 { font-size: 2.0ex; margin-left: 3em; }
.headerlink {
	display: none;
}
p {
	margin: 10px 0;
}
ol {
	list-style-position: outside;
	margin-left: 2em;
}
ul {
	list-style: square outside;
	margin-left: 2em;
}
ul ul {
	list-style: circle inside;
}
pre {
	padding: 10px;
	background-color: White;
	/*color: #222;*/
	line-height: 1.2em;
	border: 1px solid #C6C9CB;
	font-size: 1.1em;
	margin: 1.5em 0 1.5em 0;
	-webkit-box-shadow: 1px 1px 1px #d8d8d8;
	-moz-box-shadow: 1px 1px 1px #d8d8d8;
	background-color: #073642;
	color: #93a1a1;
}
tt {
	background-color: #ecf0f3;
	color: #222;
	font-size: 1.1em;
	font-family: monospace;
}

/** Header **/
header, #page_content, #about, #menu {
	width: 66.66%;
	min-width: 800px;
	margin: 0 auto;
}
header {
	font-size: 1.5ex;
	font-weight: bold;
	text-align: left;
	padding: 2px 2px 8px 2px;
	color: #4d4d4d;
}
header h1 {
	margin-top: 10px;
	border: none;
}
header p {
	margin: 0;
}
header b {
	font-variant: small-caps;
	color: #B32C0E;
}

/** Body **/
article {
	margin-top: 10px;
	padding: 10px;
	font-size: 0.9em;
	line-height:1.3em;
	padding-bottom: 5px 5px 5px 50px;
	text-align: justify;
	background: #fff;
	border: 1px solid #ccc;
	clear: both;
}
article:after {
	content: "";
	display: table;
	clear: both;
}

article a {
	color:#B32C0E;
}
article a:hover {
	color:#000000;
	text-decoration:none;
}
article img {
	max-width: 100%;
}
#about {
	text-align: center;
	padding: 5px;
	margin-top: 10px;
	margin-bottom: 10px;
	color: #aaa;
}
#about a {
	color: #aaa;
}

/** Footer **/
footer {
	color: #eee;
	margin: 0;
	font-size: 1.4ex;
	font-weight: bold;
	text-align: center;
	margin-top: 16px;
	clear: both;
}
footer b {
	font-weight: normal;
}
footer a {
	color: #666;
	text-decoration: none;
}
#menu {
	margin-top: 10px;
}
nav ul {
	list-style: none;
	margin: 0;
	padding:0;
}
nav li {
	float: left;
	width: 16.66%;
	vertical-align: middle;
}
nav a {
	display: block;
	min-height: 40px;
	font-weight: bold;
	text-decoration: none;
	margin: 1px;
	padding: 4px;
	color: #40689a;
	text-align: center;
}
nav a:hover {
	background: #555;
	color: #fff;
}
footer #about  {
	background: #eee;
	color: #999;
	padding: 10px;
}
.contacticon {
	float: left;
	width: 16.66%;
	height: 60px;
}

/** Grid **/
.grid {
	width: 100%;
}
.grid:after {
	content: "";
	display: table;
	clear: both;
}

/** Bigger **/
@media only screen and (min-width: 840px) {
	#logo {
		width: auto;
	}
	.grid-9 {
		width: 16.66%;
	}
	.grid-10 {
		width: 20%;
	}
	.grid-11 {
		width: 60%;
	}
	.grid-12 {
		width: 50%;
	}
	.grid-13 {
		width: 33.33%;
	}
	.grid-23 {
		width: 66.66%;
	}
	[class*='grid-'] {
		float: left;
		padding-right: 20px;
	}
	[class*='grid-']:last-of-type {
		padding-right: 0;
	}
}

/** Alignment & Size **/
div.alignright {
	float:right;
	margin: 20px 0px 20px 20px;
}
div.alignleft {
	float:left;
	margin: 20px 20px 20px 0px;
}
div.aligncenter {
	text-align: center;
	margin: 20px;
}
div.clearer { clear: both }

.small { font-size: 0.7em }

/*** Calendar ***/
#calendar {
	width: 100%;
}
.event {
	display: block;
	width: 100%;
	padding: 10px;
	float: left;
}
.dateheure {
	float: left;
	width: 30%;
	padding-right: 5px;
	text-align: center;
	font-size:1.4em;
}
.dateheure em, .dateheure strong, .dateheure time {
	text-transform: uppercase;
	color: #B32C0E;
	font-weight: bold;
	display: block;
}
.dateheure em {
	font-size: 75%;
}
.dateheure span {
	display: block;
	font-weight: bold;
	color: #ccc;
	font-size: 1.9em;
	line-height: 1.2em;
}
.dateheure .lieu {
	text-align: center;
	color: #B32C0E;
	font-weight: bold;
}

h2 a {
	text-decoration: none;
}

/* Blog */
#blog { padding-left: 20px;}

/* Alignement classes (for ReST-generated HTML) */

.align-right {
	float:right;
	margin: 20px 0px 20px 20px;
}
.align-left {
	float:left;
	margin: 20px 20px 20px 0px;
}

#content em {
	font-style: italic;
}

#content strong {
	font-weight: bold;
}

